--- a/package.json
+++ b/package.json
@@ -11,5 +11,12 @@
     "next": "10.x",
     "react": "17.x",
     "react-dom": "17.x"
+  },
+  "devDependencies": {
+    "@types/node": "^15.12.4",
+    "@types/react": "^17.0.11",
+    "eslint": "^7.29.0",
+    "eslint-config-next": "^11.0.1",
+    "typescript": "^4.3.4"
   }
 }
