--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "now-build": "cp canvas_lib64/*so.1 node_modules/canvas/build/Release/ && yarn build",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "canvas": "^2.8.0",
     "next": "10.x",
     "react": "17.x",
     "react-dom": "17.x"
