--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "now-build": "cp canvas_lib64/*so.1 node_modules/canvas/build/Release/ && yarn build",
-    "build": "next build",
+    "build": "cp canvas_lib64/*so.1 node_modules/canvas/build/Release/ && next build",
     "start": "next start"
   },
   "dependencies": {
