--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "deploy": "now"
   },
   "dependencies": {
-    "canvas": "^2.8.0",
+    "canvas": "2.6.1",
     "next": "10.x",
     "react": "17.x",
     "react-dom": "17.x"
